# GG

./: .gitmodules  CNAME  GG_Server  GG_Server_API_Dispatch  GG_Server_Download  GG_Server_Upload  GG_Tester  README.md  api_key_list.txt  compile.sh  compile_testing.sh  dev.cpp  dev_api_dispatch.cpp  dev_download.cpp  dev_uploader.cpp  index.html  testing.cpp  testing_api.cpp  v_list.txt
Server/: GG_Server_API_Dispatch  GG_Tester  api_key_list.txt  compile.sh  compile_testing.sh
Server/server_deps/: server_api_dispatch.hpp
Server/util_deps/: gg_api_util.hpp
archive/: v_12742992098608056934  v_14188117126190731355  v_15737560454516015194  v_17751786085340218021  v_2802581784909822756  v_3313015187754733574
client/: .gitignore  CMakeLists.txt  README.md  client.hpp  gg.cpp  gg.hpp  gg_api_util.hpp  gg_client.cpp  gg_client_menu.cpp  gg_download_util.hpp  gg_upload_util.hpp  main.cpp  socket.hpp  types.hpp  utils.hpp  version.hpp  xterm_colors.hpp  xterm_colours.hpp
menu/: CMakeLists.txt
menu/src/: menu.cpp
server/: .gitignore  dev_uploader.cpp
server/util_deps/: gg_download_util.hpp  gg_upload_util.hpp
server_deps/: server_api_dispatch.hpp  server_downloading.hpp  server_uploading.hpp
util_deps/: gg_api_util.hpp  gg_download_util.hpp  gg_upload_util.hpp
